--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,13 @@ services:
       - "8080:8080"
     working_dir: /app
     restart: unless-stopped
+  
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+    restart: unless-stopped
